[package]
name = "bench-vortex"
authors = { workspace = true }
description = "End to end vortex benchmarks"
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
publish = false
readme = "README.md"
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
arrow-select = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
bzip2 = { workspace = true }
clap = { workspace = true, features = ["derive"] }
datafusion = { workspace = true, features = [
    "parquet",
    "datetime_expressions",
] }
datafusion-common = { workspace = true }
datafusion-physical-plan = { workspace = true }
futures = { workspace = true }
governor = { workspace = true }
homedir = { workspace = true }
humansize = { workspace = true }
indicatif = { workspace = true }
itertools = { workspace = true }
log = { workspace = true, features = ["max_level_debug"] }
mimalloc = { workspace = true }
object_store = { workspace = true, features = ["aws", "gcp"] }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true, features = ["trace"] }
opentelemetry_sdk = { workspace = true }
parquet = { workspace = true, features = ["async"] }
rand = { workspace = true }
rand_distr = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tabled = { workspace = true, features = ["std"] }
tar = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-chrome = { workspace = true }
tracing-futures = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "tracing-log",
] }
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
vortex = { workspace = true, features = ["object_store", "parquet", "files"] }
vortex-datafusion = { workspace = true }
vortex-io = { workspace = true, features = ["tokio"] }
xshell = { workspace = true }

[features]
tracing = ["vortex-datafusion/tracing"]
