[package]
name = "bench-website"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "bench-website"
path = "src/main.rs"

[dependencies]
# Leptos core
leptos = { version = "0.8", features = ["nightly"] }
leptos_axum = { version = "0.8", optional = true }
leptos_router = { version = "0.8" }
leptos_meta = { version = "0.8" }

# Backend
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs", "compression-gzip"], optional = true }

# Database
duckdb = { version = "1", optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", optional = true }

# WASM
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["ssr"]
ssr = [
    "leptos/ssr",
    "dep:leptos_axum",
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:duckdb",
    "dep:tracing-subscriber",
]
hydrate = [
    "leptos/hydrate",
    "dep:wasm-bindgen",
    "dep:console_error_panic_hook",
]

[package.metadata.leptos]
output-name = "bench-website"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.css"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
