[package]
name = "duckdb_vortex_rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[[example]]
# crate-type can't be (at the moment) be overriden for specific targets
# src/wasm_lib.rs forwards to src/lib.rs so that we can change from cdylib
# (that is needed while compiling natively) to staticlib (needed since the
# actual linking will be done via emcc
name = "rusty_quack"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[dependencies]
duckdb = { version = "1.2.0", features = ["vtab-loadable"] }
duckdb-loadable-macros = "0.1.4"
libduckdb-sys = { version = "1.2.0", features = ["loadable-extension"] }
vortex-array = { workspace = true }
vortex-buffer = { workspace = true }
vortex-duckdb = { workspace = true }
vortex-dtype = { workspace = true }
vortex-layout = { workspace = true, features = ["tokio"] }
vortex-error = { workspace = true }
futures = { workspace = true, features = ["alloc"] }
vortex-file = { workspace = true, features = ["tokio"] }
vortex-io = { workspace = true, features = ["tokio"] }
tokio = { workspace = true, features = ["fs", "rt-multi-thread"] }
