[package]
name = "duckdb_vortex_rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[dependencies]
duckdb = { workspace = true, features = ["vtab-loadable"] }
duckdb-loadable-macros = "0.1.4"
futures = { workspace = true, features = ["alloc"] }
libduckdb-sys = { version = "1.2.0", features = ["loadable-extension"] }
tokio = { workspace = true, features = ["fs", "rt-multi-thread"] }
vortex-array = { workspace = true }
vortex-duckdb = { workspace = true }
vortex-error = { workspace = true }
vortex-file = { workspace = true, features = ["tokio"] }
vortex-io = { workspace = true, features = ["tokio"] }
vortex-layout = { workspace = true, features = ["tokio"] }
