[package]
name = "fls-gpu-kernel-gen"
authors = { workspace = true }
categories = { workspace = true }
description = "Vortex Sparse array"
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lib]
name = "fls_gpu_kernel_gen"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
fastlanes = { workspace = true }
