[package]
name = "vortex-fuzz"
authors = { workspace = true }
categories = { workspace = true }
description = "Fuzzer for vortex arrays"
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
publish = false
readme = "README.md"
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[package.metadata]
cargo-fuzz = true

[dependencies]
itertools = { workspace = true }
libfuzzer-sys = { workspace = true }
strum = { workspace = true, features = ["derive"] }
vortex = { workspace = true }
vortex-array = { workspace = true, features = ["arbitrary", "test-harness"] }
vortex-btrblocks = { workspace = true }
vortex-buffer = { workspace = true }
vortex-dtype = { workspace = true, features = ["arbitrary"] }
vortex-error = { workspace = true }
vortex-file = { workspace = true, features = ["tokio", "zstd"] }
vortex-io = { workspace = true }
vortex-layout = { workspace = true, features = ["zstd"] }
vortex-mask = { workspace = true }
vortex-scalar = { workspace = true, features = ["arbitrary"] }
vortex-session = { workspace = true }
vortex-utils = { workspace = true }

[lints]
workspace = true

[[bin]]
bench = false
doc = false
name = "array_ops"
path = "fuzz_targets/array_ops.rs"
test = false

[[bin]]
bench = false
doc = false
name = "file_io"
path = "fuzz_targets/file_io.rs"
test = false
