[package]
name = "vortex-fuzz"
authors = { workspace = true }
categories = { workspace = true }
description = "Fuzzer for vortex arrays"
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
publish = false
readme = "README.md"
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[package.metadata]
cargo-fuzz = true

[features]
default = ["native"]
native = ["libfuzzer-sys", "zstd", "vortex-file", "vortex/files"]
wasmfuzz = []
zstd = ["vortex/zstd", "vortex-btrblocks/zstd", "vortex-btrblocks/pco"]
cuda = ["vortex-cuda", "tokio"]

[dependencies]
# Always needed - arbitrary is used for input generation
arbitrary = { workspace = true }
itertools = { workspace = true }
strum = { workspace = true, features = ["derive"] }

# Vortex core - no default features for WASM compatibility (files feature pulls in tokio)
vortex = { path = "../vortex", default-features = false }
vortex-array = { workspace = true, features = ["arbitrary", "_test-harness"] }
vortex-btrblocks = { workspace = true }
vortex-buffer = { workspace = true }
vortex-error = { workspace = true }
vortex-fsst = { workspace = true }
vortex-io = { workspace = true }
vortex-mask = { workspace = true }
vortex-runend = { workspace = true, features = ["arbitrary"] }
vortex-session = { workspace = true }
vortex-utils = { workspace = true }

# Native-only: libfuzzer harness and file IO (won't compile to WASM)
libfuzzer-sys = { workspace = true, optional = true }
vortex-file = { workspace = true, optional = true }

# GPU support dependencies (optional, only for CUDA fuzzing)
tokio = { workspace = true, features = ["rt", "macros"], optional = true }
vortex-cuda = { workspace = true, optional = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true

[[bin]]
bench = false
doc = false
name = "array_ops"
path = "fuzz_targets/array_ops.rs"
test = false
required-features = ["native"]

[[bin]]
bench = false
doc = false
name = "array_ops_unstable_encodings"
path = "fuzz_targets/array_ops_unstable_encodings.rs"
test = false
required-features = ["native"]

[[bin]]
bench = false
doc = false
name = "file_io"
path = "fuzz_targets/file_io.rs"
test = false
required-features = ["native"]

[[bin]]
bench = false
doc = false
name = "array_ops_wasm"
path = "fuzz_targets/array_ops_wasm.rs"
test = false
required-features = ["wasmfuzz"]

[[bin]]
bench = false
doc = false
name = "compress_roundtrip"
path = "fuzz_targets/compress_roundtrip.rs"
test = false
required-features = ["native"]

[[bin]]
bench = false
doc = false
name = "fsst_like"
path = "fuzz_targets/fsst_like.rs"
test = false
required-features = ["native"]

[[bin]]
bench = false
doc = false
name = "compress_gpu"
path = "fuzz_targets/compress_gpu.rs"
test = false
required-features = ["native", "cuda"]
