[package]
name = "geo"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
geoarrow = { git = "https://github.com/geoarrow/geoarrow-rs.git", rev = "c241034f" }
geoarrow-schema = { git = "https://github.com/geoarrow/geoarrow-rs.git", rev = "c241034f" }
vortex = { workspace = true }

[lints]
workspace = true
