[package]
name = "lockfiles"
description = "Build lockfiles for all workspace projects"
publish = false
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
cargo_metadata = "0.23"
rayon = "1"

[lints]
workspace = true
