[package]
name = "pyvortex"
publish = false
version = { workspace = true }
description = "Python bindings for Vortex, an Apache Arrow-compatible toolkit for working with compressed array data."
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
categories = { workspace = true }
rust-version = { workspace = true }
readme = { workspace = true }

[lints]
workspace = true

[lib]
name = "pyvortex"
crate-type = ["rlib", "cdylib"]
doctest = false

[dependencies]
arrow = { workspace = true, features = ["pyarrow"] }
flume = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
object_store = { workspace = true, features = ["aws", "gcp", "azure", "http"] }
pyo3 = { workspace = true }
pyo3-log = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
url = { workspace = true }
vortex = { workspace = true, features = ["object_store", "python"] }
