[package]
name = "pyvortex"
authors = { workspace = true }
categories = { workspace = true }
description = "Python bindings for Vortex, an Apache Arrow-compatible toolkit for working with compressed array data."
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
publish = false
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[lib]
crate-type = ["rlib", "cdylib"]
doctest = false                 # TODO(ngates): why?
name = "pyvortex"

[dependencies]
arcref = { workspace = true }
arrow = { workspace = true, features = ["pyarrow"] }
futures = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
mimalloc = { workspace = true }
object_store = { workspace = true, features = ["aws", "gcp", "azure", "http"] }
pyo3 = { workspace = true }
pyo3-log = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt-multi-thread"] }
url = { workspace = true }
vortex = { workspace = true, features = ["object_store", "python"] }
