[project]
name = "vortex-array"
# Maturin copies these, at build time, from Cargo.toml.
# https://github.com/PyO3/maturin/blob/main/src/metadata.rs#L127-L129
dynamic = ["version", "description", "authors"]
readme = "README.md"
dependencies = ["pyarrow>=17.0.0", "substrait>=0.23.0"]
requires-python = ">= 3.10"

[project.optional-dependencies]
polars = ["polars>=1.9.0"]
pandas = ["pandas>=2.2.0"]
numpy = ["numpy>=1.26.0"]

[project.urls]
Documentation = "https://docs.vortex.dev"
Changelog = "https://github.com/spiraldb/vortex/blob/develop/CHANGELOG.md"
Issues = "https://github.com/spiraldb/vortex/issues"
Benchmarks = "https://bench.vortex.dev"

[build-system]
requires = ["maturin>=1.7.2,<2.0"]
build-backend = "maturin"

[tool.uv]
managed = true

[tool.maturin]
python-source = "python"
module-name = "vortex._lib"
features = ["pyo3/extension-module"]
include = [
    { path = "rust-toolchain.toml", format = "sdist" },
    { path = "README.md", format = "sdist" },
    { path = "python/vortex/py.typed", format = "sdist" },
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "numpy>=2.2.2",
    "pandas-stubs>=2.2.3.241126",
    "pcodec>=0.3.3",
    "pyarrow-stubs>=17.16",
]
