[package]
name = "vortex-arcref"
authors = { workspace = true }
categories = { workspace = true }
description = "A stable pointer type that is either Arc<T> or &'static T"
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lints]
workspace = true
