[package]
name = "vortex-array"
authors = { workspace = true }
categories = { workspace = true }
description = "Vortex in memory columnar data format"
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[dependencies]
arbitrary = { workspace = true, optional = true }
arrow-arith = { workspace = true }
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
arrow-cast = { workspace = true }
arrow-ord = { workspace = true }
arrow-schema = { workspace = true }
arrow-select = { workspace = true }
arrow-string = { workspace = true }
cfg-if = { workspace = true }
enum-iterator = { workspace = true }
flatbuffers = { workspace = true }
futures-util = { workspace = true }
getrandom_v03 = { workspace = true }
goldenfile = { workspace = true, optional = true }
hashbrown = { workspace = true }
humansize = { workspace = true }
inventory = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
num_enum = { workspace = true }
parking_lot = { workspace = true }
paste = { workspace = true }
pin-project = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
rstest = { workspace = true, optional = true }
rstest_reuse = { workspace = true, optional = true }
rustc-hash = { workspace = true }
serde = { workspace = true, features = ["derive"] }
static_assertions = { workspace = true }
vortex-buffer = { workspace = true, features = ["arrow"] }
vortex-dtype = { workspace = true, features = ["arrow", "serde"] }
vortex-error = { workspace = true, features = [
    "flatbuffers",
    "flexbuffers",
    "prost",
    "rancor",
] }
vortex-flatbuffers = { workspace = true, features = ["array"] }
vortex-mask = { workspace = true }
vortex-scalar = { workspace = true, features = ["flatbuffers", "serde"] }

[features]
arbitrary = [
    "dep:arbitrary",
    "vortex-dtype/arbitrary",
    "vortex-scalar/arbitrary",
]
canonical_counter = []
test-harness = ["dep:goldenfile", "dep:rstest", "dep:rstest_reuse"]

[dev-dependencies]
divan = { workspace = true }
rstest = { workspace = true }
vortex-array = { path = ".", features = ["test-harness"] }

[[bench]]
name = "search_sorted"
harness = false

[[bench]]
name = "scalar_subtract"
harness = false

[[bench]]
name = "compare"
harness = false

[[bench]]
name = "take_strings"
harness = false

[[bench]]
name = "take_patches"
harness = false

[[bench]]
name = "chunk_array_builder"
harness = false
