[package]
name = "vortex-arrow-hook"
authors = { workspace = true }
categories = { workspace = true }
description = "Process-global registration slot used by vortex-array to locate vortex-arrow's compute fallbacks"
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[dependencies]
